2024-04-05 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api/ipmi-api.c (ipmi_cmd): Remove duplicate
	parameter check.

2024-04-02 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole-argp.c, man/ipmiconsole.8.pre.in:
	--debugfile only available in debug mode.

2024-03-22 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sel/ipmi-sel-string-supermicro-common.h: Add missing
	function prototype.

2024-03-22 Alex Owen

	* ipmi-oem/ipmi-oem-dell.c
	(ipmi_oem_dell_get_power_consumption_data): Increase output
	precision in cumalative energy output.

2024-02-21 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c
	(ipv6_dynamic_address_source_type_checkout): Fix incorrect output
	of IPv6_Dynamic_Address_Source_Type.

2024-01-27 Albert Chu <chu11@llnl.gov>

	* configure.ac: Remove duplicate inb/outb declaration check.  Could
	lead to broken builds on non-x86 systems.

2024-01-26 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors: support new "altbridging" workaround for Lenovo
	SR650 v3 motherboards.

2024-01-26 Albert Chu <chu11@llnl.gov>

	* Globally replace use of MAXHOSTNAMELEN with internal
	FREEIPMI_MAXHOSTNAMELEN which is set to 256 bytes (vs the typical
	64 bytes that MAXHOSTNAMELEN).  This allows hostnames of > 64
	characters in length to be specified.

2024-01-25 Anonymous

	* configure.ac: check for inb and outb declarations in header
	files.

2023-12-17 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/interpret: Support intepretation of physical
	intrusion + state sensors.

2023-09-29 Albert Chu <chu11@llnl.gov>

	* README: add rpm build notes

2023-09-28 Albert Chu <chu11@llnl.gov>

	* configure.ac: temporarily set version to 1.7.0 for user to
	experiment with installed build.

	* README: add some build notes / help.

2023-09-05 Felip Moll <felip.moll@schedmd.com>

	* libfreeipmi/driver/ipmi-openipmi-driver.c (_openipmi_read):
	Convert from select() to poll() to avoid issues with high number